--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,18 @@
 services:
   web:
     build: .
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - web
 
 networks:
   default:
