--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,18 @@ server {
     server_name localhost;
     
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri.html $uri/ /index.html;
+        proxy_pass http://web:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /_next/static {
-        alias /usr/share/nginx/html/_next/static;
+        proxy_pass http://web:3000;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host $host;
         expires 365d;
         access_log off;
     }
